syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  // server stream
  rpc SayHelloStream (HelloRequest) returns (stream HelloReply) {}

  // client stream
  rpc SayHelloClientStream(stream HelloRequest) returns (HelloReply) {}

  // bi stream
  rpc SayHelloBiStream(stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}